# test2

./: README.md  app.py  extensions.py  pyproject.toml  test_rag.py
ai_engine/: bm25_store.py  chunker.py  docling_extractor.py  embedder.py  groq_llm.py  handwriting_detector.py  hybrid_ocr.py  rag_engine.py  trocr_ocr.py  vector_store.py
chroma_db/: chroma.sqlite3
config/: __init__.py  base.py  development.py  production.py  testing.py
errors/: exceptions.py  handlers.py
extractors/: base.py  extractor_router.py  scanned_pdf_extractor.py  text_pdf_extractor.py
outputs/structured/: Abstract.json  CS 2025.json  RAG testing typically refers to Red.json  SCAN_20251119_210511560.json  Summary_M2SMart_Handbook-1_(1)[1].json  Unit-4.json  kriran.json  saikiran_portfolio.json  sample-tables.json  sample.json  unit-2.json
prompts/: mindmap.txt  qa.txt  summary.txt  verify.txt
services/: document_service.py  llm_service.py  rag_service.py
static/css/: index.css  result.css
static/js/: chat.js  mindmap.js  pdf_viewer.js  summary.js  tabs.js
templates/: index.html  result.html
utils/: logger.py  prompt_loader.py
